# django-countries-hdx

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
data/: merge.py
django_countries_hdx/: __init__.py
django_countries_regions/: __init__.py  country_regions.py  regions.py
tests/: test_django_countries_regions.py
